--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <path d="M8 256c0 136.966 111.033 248 248 248s248-111.034 248-248S392.966 8 256 8 8 119.033 8 256zm248 184V72c101.705 0 184 82.311 184 184 0 101.705-82.311 184-184 184z"/>
             </svg></button>
         </div>
-        <p class="release">Version 2.2.r1</p>
+        <p class="release">Version 2.2-r2</p>
         <button class="add-button">Install</button><hr>
         <p>BOcT is a Static Browser Chatbot</p>
         <p>It's currently in Early development stages</p>
@@ -109,7 +109,28 @@
   <!-- iPopUp here -->
   <div id="info_popup">
     <div class="info_window">
-      <div class="info_content"></div>
+      <div class="info_content">
+        <p>Currently Working Replies:</p>
+        <ul>
+          <li>hi / hello / hey / heya</li>
+          <li>no / nothing / I dont know</li>
+          <li>What is your age / your age</li>
+          <li>Annoy me / idiot</li>
+          <li>ok / great / .....</li>
+          <li>so / what else</li>
+          <li>google *word*</li>
+        </ul>
+        <p>DOt Commands: </p>
+        <ul>
+          <li>.name</li>
+          <li>.age</li>
+          <li>.god</li>
+          <li>.v</li>
+          <li>.url</li>
+          <li>.code</li>
+          <li>.meow</li>
+        </ul>
+      </div>
       <div class="info_links">
         <a href="https://github.com/The-BOcT/The-BOcT.github.io/blob/master/LICENSE.md" title="Under MIT LICENSE">© 2020 U-C-S</a><br>
         <a href="https://github.com/The-BOcT/The-BOcT.github.io/">View Source</a>
@@ -121,10 +142,9 @@
 
   <!--Off Canvas menu for Settings-->
   <aside class="settingbar">
-    <ul class="nav-items">
-      <li>This space will be alotted for Settings</li>
-      <li>EXPERIMENTAL ALERT!!</li>
-    </ul><hr>
+    <p>This space will be alotted for Settings</li>
+    <p>EXPERIMENTAL ALERT!!</li>
+    <hr>
 </aside>
 
 </body>
