--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="UCS">
   <meta name="description" content="Meet the BOcT">
 
-  <link rel="icon" href="boctstyle/icons/robot.ico">
+  <link rel="icon" sizes="48x48" href="boctstyle/icons/robot.ico">
   <link rel="license" href="/LICENSE.md">
 
   <link rel="preconnect" href="https://fonts.googleapis.com/" crossorigin>
@@ -88,7 +88,7 @@
             <path d="M8 256c0 136.966 111.033 248 248 248s248-111.034 248-248S392.966 8 256 8 8 119.033 8 256zm248 184V72c101.705 0 184 82.311 184 184 0 101.705-82.311 184-184 184z"/>
             </svg></button>
         </div>
-        <p class="release">Version 2.2-r3</p>
+        <p class="release">Version 2.2-r4</p>
         <button class="add-button">Install</button><hr>
         <p>BOcT is a Static Browser Chatbot</p>
         <p>It's currently in Early development stages</p>
@@ -120,7 +120,7 @@
           <li>Annoy me / idiot</li>
           <li>ok / great / .....</li>
           <li>so / what else</li>
-          <li>google *word*</li>
+          <li>google/youtube/bing/duckduckgo *word*</li>
         </ul>
         <p>DOt Commands: </p>
         <ul>
