--- a/index.html
+++ b/index.html
@@ -88,14 +88,11 @@
             <path d="M8 256c0 136.966 111.033 248 248 248s248-111.034 248-248S392.966 8 256 8 8 119.033 8 256zm248 184V72c101.705 0 184 82.311 184 184 0 101.705-82.311 184-184 184z"/>
             </svg></button>
         </div>
-        <p class="release">Version 2.2-r4</p>
+        <p class="release">Version 2.207</p>
         <button class="add-button">Install</button><hr>
         <p>BOcT is a Static Browser Chatbot</p>
         <p>It's currently in Early development stages</p>
         <p>Future Updates to BOcT can make it perform basic Maths, Unit Conversions, Maybe suggest you some Movies...</p>
-        <hr><p>- New Features -</p>
-        <p>You can search Google, Bing, YouTube and DuckDuckGo with it</p>
-        <p>Choose between Dark/Light Theme</p>
       </fieldset>
     </div>
   </div>
@@ -144,10 +141,9 @@
 
   <!--Off-Canvas menu for Settings-->
   <aside class="settingbar">
-    <p>This space will be alotted for Settings</li>
-    <p>EXPERIMENTAL ALERT!!</li>
-    <hr>
-</aside>
+    <h2>BOcT Settings</h2>
+    <label class="stg_contain">Open Chatbox by Default:<input type="checkbox" id="stg_chat_open_default"></label>
+  </aside>
 
 </body>
 </html>
