--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8">
   <meta name="google-site-verification" content="qho6LUTU0hTe7r6Slj67fZhj2aTZ7MvQ4N-PQ2X_u0U" />
-  <meta name="author" content="UCS">
+  <meta name="author" content="U-C-S">
   <meta name="description" content="Meet the BOcT">
 
   <link rel="icon" sizes="48x48" href="boctstyle/icons/robot.ico">
