--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
           <button id="i-btn" title="Info"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
             <path d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"/>
             </svg></button>
-          <button class="togglemode" data-themenow="dark" title="Toggle Dark/Light Mode"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+          <button class="toggleTheme" data-themenow="dark" title="Toggle Dark/Light Mode"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
             <path d="M8 256c0 136.966 111.033 248 248 248s248-111.034 248-248S392.966 8 256 8 8 119.033 8 256zm248 184V72c101.705 0 184 82.311 184 184 0 101.705-82.311 184-184 184z"/>
             </svg></button>
         </div>
-        <p class="release">Version 2.207</p>
+        <p class="release">Version 2.21</p>
         <button class="add-button">Install</button><hr>
         <p>BOcT is a Static Browser Chatbot</p>
         <p>It's currently in Early development stages</p>
