--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
   <script defer src="boctscript/index.js"></script>
   <script defer src="boctscript/boct.js"></script>
   <script defer src="boctscript/talk-script.js"></script>
+  <!--
+  <script defer src="boctscript/vue.js"></script>
+  <script defer src="boctscript/settings.js"></script> -->
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-172329807-1"></script>
@@ -88,7 +91,7 @@
             <path d="M8 256c0 136.966 111.033 248 248 248s248-111.034 248-248S392.966 8 256 8 8 119.033 8 256zm248 184V72c101.705 0 184 82.311 184 184 0 101.705-82.311 184-184 184z"/>
             </svg></button>
         </div>
-        <p class="release">Version 2.212a</p>
+        <p class="release">Version 2.213</p>
         <button class="add-button">Install</button><hr>
         <p>BOcT is a Static Browser Chatbot</p>
         <p>It's currently in Early development stages</p>
@@ -144,7 +147,7 @@
     <h2>BOcT Settings</h2>
     <label class="stg_contain">Open Chatbox by Default:<input type="checkbox" id="stg_chat_open_default"></label>
 
-    <button id="cokieClear">Clear LocalStorage</button>
+    <button id="cokieClear" title="This clears all the settings data stored for this Website and Reloads the Page">Reset your Settings</button>
   </aside>
 
 </body>
