--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <script defer src="boctscript/boct.js"></script>
   <script defer src="boctscript/talk-script.js"></script>
   <!--
-  <script defer src="boctscript/vue.js"></script>
+  <script defer src="boctscript/vue.min.js"></script>
   <script defer src="boctscript/settings.js"></script> -->
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
