--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
 
   <!--Scripts-->
   <script defer src="boctscript/index.js"></script>
-  <script defer src="boctscript/boct.js"></script>
+  <script defer src="boctscript/settings.js"></script>
   <script defer src="boctscript/talk-script.js"></script>
   <!--
   <script defer src="boctscript/vue.min.js"></script>
-  <script defer src="boctscript/settings.js"></script> -->
+ -->
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-172329807-1"></script>
@@ -91,7 +91,7 @@
             <path d="M8 256c0 136.966 111.033 248 248 248s248-111.034 248-248S392.966 8 256 8 8 119.033 8 256zm248 184V72c101.705 0 184 82.311 184 184 0 101.705-82.311 184-184 184z"/>
             </svg></button>
         </div>
-        <p class="release">Version 2.213</p>
+        <p class="release">Version 2.213a</p>
         <button class="add-button">Install</button><hr>
         <p>BOcT is a Static Browser Chatbot</p>
         <p>It's currently in Early development stages</p>
