--- a/index.html
+++ b/index.html
@@ -28,12 +28,10 @@
   <link rel="apple-touch-icon" sizes="48x48" href="/boctstyle/icons/robot.png">
 
   <!--Scripts-->
+  <script defer src="boctscript/vue.min.js"></script>
   <script defer src="boctscript/index.js"></script>
   <script defer src="boctscript/settings.js"></script>
   <script defer src="boctscript/talk-script.js"></script>
-  <!--
-  <script defer src="boctscript/vue.min.js"></script>
- -->
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-172329807-1"></script>
@@ -91,7 +89,7 @@
             <path d="M8 256c0 136.966 111.033 248 248 248s248-111.034 248-248S392.966 8 256 8 8 119.033 8 256zm248 184V72c101.705 0 184 82.311 184 184 0 101.705-82.311 184-184 184z"/>
             </svg></button>
         </div>
-        <p class="release">Version 2.213b</p>
+        <p class="release">Version 2.215</p>
         <button class="add-button">Install</button><hr>
         <p>BOcT is a Static Browser Chatbot</p>
         <p>It's currently in Early development stages</p>
@@ -147,7 +145,10 @@
     <h2>BOcT Settings</h2>
     <label class="stg_contain">Open Chatbox by Default:<input type="checkbox" id="stg_chat_open_default"></label>
 
-    <button id="cokieClear" title="This clears all the settings data stored for this Website and Reloads the Page">Reset your Settings</button>
+    <div id="cokieClear">
+      <button v-on:click="cokiereset">Reset your Settings</button>
+      <p>{{ cookieInfo }}</p>
+    </div>
   </aside>
 
 </body>
