--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
   <meta name="theme-color" content="#E64C63"/>
   <link rel="manifest" type="application/manifest+json; charset=utf-8" href="/manifest.webmanifest">
   <link rel="apple-touch-icon" sizes="128x128" href="/boctstyle/icons/robot128.png">
-  <link rel="apple-touch-icon" sizes="48x48" href="/boctstyle/icons/robot.png">
 
   <!--Scripts-->
   <script defer src="boctscript/vue.min.js"></script>
@@ -89,7 +88,7 @@
             <path d="M8 256c0 136.966 111.033 248 248 248s248-111.034 248-248S392.966 8 256 8 8 119.033 8 256zm248 184V72c101.705 0 184 82.311 184 184 0 101.705-82.311 184-184 184z"/>
             </svg></button>
         </div>
-        <p class="release">Version 2.217</p>
+        <p class="release">Version 2.217a</p>
         <button class="add-button">Install</button><hr>
         <p>BOcT is a Static Browser Chatbot</p>
         <p>It's currently in Early development stages</p>
