--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
   <script defer src="boctscript/index.js"></script>
   <script defer src="boctscript/settings.js"></script>
   <script defer src="boctscript/talk-script.js"></script>
+  <script defer src="boctscript/unit-convert.js"></script>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-172329807-1"></script>
@@ -88,11 +89,12 @@
             <path d="M8 256c0 136.966 111.033 248 248 248s248-111.034 248-248S392.966 8 256 8 8 119.033 8 256zm248 184V72c101.705 0 184 82.311 184 184 0 101.705-82.311 184-184 184z"/>
             </svg></button>
         </div>
-        <p class="release">Version 2.217a</p>
+        <p class="release">Version 2.22</p>
         <button class="add-button">Install</button><hr>
         <p>BOcT is a Static Browser Chatbot</p>
         <p>It's currently in Early development stages</p>
-        <p>Future Updates to BOcT can make it perform basic Maths, Unit Conversions, Maybe suggest you some Movies...</p>
+        <p>Future Updates to BOcT can make it perform basic Maths, more Unit Conversions, Maybe suggest you some Movies...</p><hr>
+        <p>New Feature: Type 'Convert' in the Chatbox to try it</p>
       </fieldset>
     </div>
   </div>
