--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <path d="M8 256c0 136.966 111.033 248 248 248s248-111.034 248-248S392.966 8 256 8 8 119.033 8 256zm248 184V72c101.705 0 184 82.311 184 184 0 101.705-82.311 184-184 184z"/>
             </svg></button>
         </div>
-        <p class="release">Version 2.223</p>
+        <p class="release">Version 2.225</p>
         <button class="add-button">Install</button><hr>
         <p>BOcT is a Static Browser Chatbot</p>
         <p>It's currently in Early development stages</p>
@@ -120,6 +120,8 @@
           <li>ok / great / .....</li>
           <li>so / what else</li>
           <li>google/youtube/bing/duckduckgo *word*</li>
+          <li>roll a dice / roll dice</li>
+          <li>flip a coin / toss a coin</li>
         </ul>
         <p>DOt Commands: </p>
         <ul>
@@ -130,6 +132,8 @@
           <li>.url</li>
           <li>.code</li>
           <li>.meow</li>
+          <li>.dice</li>
+          <li>.coin</li>
         </ul>
       </div>
       <div class="info_links">
