--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
   <div id="info_popup">
     <div class="info_window">
       <div class="info_content">
+        <p>Upcoming: Version 2.3</p>
         <p>Currently Working Replies:</p>
         <ul>
           <li>hi / hello / hey / heya</li>
