--- a/index.html
+++ b/index.html
@@ -89,12 +89,11 @@
             <path d="M8 256c0 136.966 111.033 248 248 248s248-111.034 248-248S392.966 8 256 8 8 119.033 8 256zm248 184V72c101.705 0 184 82.311 184 184 0 101.705-82.311 184-184 184z"/>
             </svg></button>
         </div>
-        <p class="release">Version 2.30.1</p>
+        <p class="release">Version 2.30.2</p>
         <button class="add-button">Install</button><hr>
         <p>BOcT is a Static Browser Chatbot</p>
         <p>It's currently in Early development stages</p>
-        <p>Future Updates to BOcT can make it perform basic Maths, more Unit Conversions, Maybe suggest you some Movies...</p><hr>
-        <p>New Feature: Type 'Convert' in the Chatbox to try it</p>
+        <p>Future Updates to BOcT can make it perform basic Maths, more Unit Conversions, Maybe suggest you some Movies...</p>
       </fieldset>
     </div>
   </div>
@@ -111,6 +110,8 @@
   <div id="info_popup">
     <div class="info_window">
       <div class="info_content">
+        <p>New Feature: Unit Conversions</p>
+        <p>Example: convert 100cm to m</p>
         <p>Currently Working Replies:</p>
         <ul>
           <li>hi / hello / hey / heya</li>
