--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <path d="M8 256c0 136.966 111.033 248 248 248s248-111.034 248-248S392.966 8 256 8 8 119.033 8 256zm248 184V72c101.705 0 184 82.311 184 184 0 101.705-82.311 184-184 184z"/>
             </svg></button>
         </div>
-        <p class="release">Version 2.30.4</p>
+        <p class="release">Version 2.31</p>
         <button class="add-button">Install</button><hr>
         <p>BOcT is a Static Browser Chatbot</p>
         <p>It's currently in Early development stages</p>
@@ -152,6 +152,9 @@
     <label class="stg_contain">Open Chatbox by Default:
       <input type="checkbox" id="stg_chat_open_default"></label>
 
+    <label class="stg_contain">Disable Load Screen:
+      <input type="checkbox" id="stg_disable_load"></label>
+    
     <div id="cokieClear">
       <button v-on:click="cokieReset">{{ cokieClearBtn }}</button>
       <p>{{ cookieInfo }}</p>
