--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <path d="M8 256c0 136.966 111.033 248 248 248s248-111.034 248-248S392.966 8 256 8 8 119.033 8 256zm248 184V72c101.705 0 184 82.311 184 184 0 101.705-82.311 184-184 184z"/>
             </svg></button>
         </div>
-        <p class="release">Version 2.31a</p>
+        <p class="release">Version 2.31 Enhanced</p>
         <button class="add-button">Install</button><hr>
         <p>BOcT is a Static Browser Chatbot</p>
         <p>It's currently in Early development stages</p>
@@ -98,7 +98,7 @@
     </div>
   </div>
 
-  <!-- Fake Loading screen --------------------------------------->
+  <!-- Fake Loading screen --->
   <div class="loader-wrapper" id="loader">
     <div class="loader">
       <div class="load_bar" id="barr"></div>
@@ -106,7 +106,7 @@
     </div>
   </div>
 
-  <!-- iPopUp -->
+  <!-- iPopUp --->
   <div id="info_popup">
     <div class="info_window">
       <div class="info_content">
@@ -146,7 +146,7 @@
     </div>
   </div>
 
-  <!--Off-Canvas menu for Settings-->
+  <!--Off-Canvas menu for Settings--->
   <aside class="settingbar">
     <h2>BOcT Settings</h2>
     <label class="stg_contain">Open Chatbox by Default:
