ts 5.1 from TypeScript Repo

--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
   <link rel="stylesheet" href="boctstyle/boctmediaq.css" media="screen and (max-width: 960px)">
 
   <!--PWA-->
-  <script defer src="boctscript/PWA.js"></script>
+  <script defer src="boct_Scripts/PWA.js"></script>
   <meta name="application-name" content="The BOcT">
   <meta name="theme-color" content="#E64C63"/>
   <link rel="manifest" type="application/manifest+json; charset=utf-8" href="/manifest.webmanifest">
   <link rel="apple-touch-icon" sizes="128x128" href="/boctstyle/icons/robot128.png">
 
   <!--Scripts-->
-  <script defer src="boctscript/index.js"></script>
-  <script defer src="boctscript/settings.js"></script>
-  <script defer src="boctscript/talk-script.js"></script>
-  <script defer src="boctscript/unit-convert.js"></script>
+  <script defer src="boct_Scripts/index.js"></script>
+  <script defer src="boct_Scripts/settings.js"></script>
+  <script defer src="boct_Scripts/talk-script.js"></script>
+  <script defer src="boct_Scripts/unit-convert.js"></script>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-172329807-1"></script>
@@ -89,7 +89,7 @@
             <path d="M8 256c0 136.966 111.033 248 248 248s248-111.034 248-248S392.966 8 256 8 8 119.033 8 256zm248 184V72c101.705 0 184 82.311 184 184 0 101.705-82.311 184-184 184z"/>
             </svg></button>
         </div>
-        <p class="release">Version 2.33 Beta</p>
+        <p class="release">Target Version 2.4 | ts 5.1</p>
         <button class="add-button">Install</button><hr>
         <p>BOcT is a Static Browser Chatbot</p>
         <p>It's currently in Early development stages</p>
@@ -100,8 +100,7 @@
 
   <!-- Fake Loading screen --->
   <div class="loader-wrapper" id="loader">
-    <div class="loader">
-      <div class="load_bar" id="barr"></div>
+    <div class="loader"><div class="load_bar" id="barr"></div>
       <div class="load_text" id="textt">BOcT Loading...</div>
     </div>
   </div>
@@ -154,11 +153,8 @@
 
     <label class="stg_contain">Disable Load Screen:
       <input type="checkbox" id="stg_disable_load"></label>
-    
-    <div id="cokieClear">
-      <button class="stg_btn" v-on:click="cokieReset">{{ cokieClearBtn }}</button>
-      <p>{{ cookieInfo }}</p>
-    </div>
+
+    <button class="stg_btn">Clear your Settings</button>
 
     <button id="stg_clearchat" class="stg_btn">Clear the Chat</button>
   </aside>
