--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="U-C-S">
   <meta name="description" content="Meet the BOcT">
 
-  <link rel="icon" sizes="48x48" href="boctstyle/icons/robot.ico">
+  <link rel="icon" href="boctstyle/icons/robot.ico">
   <link rel="license" href="/LICENSE.md">
 
   <link rel="preconnect" href="https://fonts.googleapis.com/" crossorigin>
@@ -19,13 +19,6 @@
   <!--CSS-->
   <link rel="stylesheet" href="boctstyle/boct.css">
   <link rel="stylesheet" href="boctstyle/boctmediaq.css" media="screen and (max-width: 960px)">
-
-  <!--PWA-->
-  <script defer src="boct_Scripts/PWA.js"></script>
-  <meta name="application-name" content="The BOcT">
-  <meta name="theme-color" content="#E64C63"/>
-  <link rel="manifest" type="application/manifest+json; charset=utf-8" href="/manifest.webmanifest">
-  <link rel="apple-touch-icon" sizes="128x128" href="/boctstyle/icons/robot128.png">
 
   <!--Scripts-->
   <script defer src="boct_Scripts/index.js"></script>
@@ -89,7 +82,7 @@
             <path d="M8 256c0 136.966 111.033 248 248 248s248-111.034 248-248S392.966 8 256 8 8 119.033 8 256zm248 184V72c101.705 0 184 82.311 184 184 0 101.705-82.311 184-184 184z"/>
             </svg></button>
         </div>
-        <p class="release">Target Version 2.4 | ts 5.1</p>
+        <p class="release">Version 3</p>
         <button class="add-button">Install</button><hr>
         <p>BOcT is a Static Browser Chatbot</p>
         <p>It's currently in Early development stages</p>
