--- a/index.html
+++ b/index.html
@@ -21,13 +21,11 @@
   <link rel="stylesheet" href="boctstyle/boctmediaq.css" media="screen and (max-width: 960px)">
 
   <!--PWA-->
-  <link rel="manifest" type="application/manifest+json; charset=utf-8" href="/manifest.json">
+  <script defer src="boct_Scripts/PWA.js"></script>
+  <meta name="application-name" content="The BOcT">
+  <meta name="theme-color" content="#E64C63"/>
+  <link rel="manifest" type="application/manifest+json; charset=utf-8" href="/manifest.webmanifest">
   <link rel="apple-touch-icon" sizes="128x128" href="/boctstyle/icons/robot128.png">
-  <script type="module">
-    import '/pwaupdate.js';
-    const el = document.createElement('pwa-update');
-    document.body.appendChild(el);
-  </script>
 
   <!--Scripts-->
   <script defer src="boct_Scripts/index.js"></script>
@@ -91,7 +89,7 @@
             <path d="M8 256c0 136.966 111.033 248 248 248s248-111.034 248-248S392.966 8 256 8 8 119.033 8 256zm248 184V72c101.705 0 184 82.311 184 184 0 101.705-82.311 184-184 184z"/>
             </svg></button>
         </div>
-        <p class="release">Version 3 Alpha 2</p>
+        <p class="release">Version 3 Alpha 3</p>
         <button class="add-button">Install</button><hr>
         <p>BOcT is a Static Browser Chatbot</p>
         <p>It's currently in Early development stages</p>
