--- a/index.html
+++ b/index.html
@@ -20,12 +20,20 @@
   <link rel="stylesheet" href="boctstyle/boct.css">
   <link rel="stylesheet" href="boctstyle/boctmediaq.css" media="screen and (max-width: 960px)">
 
-  <!--PWA-->
+  <!--PWA
   <script defer src="boct_Scripts/PWA.js"></script>
   <meta name="application-name" content="The BOcT">
   <meta name="theme-color" content="#E64C63"/>
   <link rel="manifest" type="application/manifest+json; charset=utf-8" href="/manifest.webmanifest">
   <link rel="apple-touch-icon" sizes="128x128" href="/boctstyle/icons/robot128.png">
+-->
+  <link rel="manifest" type="application/manifest+json; charset=utf-8" href="/manifest.json">
+  <script type="module">
+    import 'https://cdn.jsdelivr.net/npm/@pwabuilder/pwaupdate';
+    const el = document.createElement('pwa-update');
+    document.body.appendChild(el);
+  </script>
+  <script type="module" src="https://cdn.jsdelivr.net/npm/@pwabuilder/pwainstall@latest/dist/pwa-install.min.js"></script>
 
   <!--Scripts-->
   <script defer src="boct_Scripts/index.js"></script>
@@ -89,8 +97,8 @@
             <path d="M8 256c0 136.966 111.033 248 248 248s248-111.034 248-248S392.966 8 256 8 8 119.033 8 256zm248 184V72c101.705 0 184 82.311 184 184 0 101.705-82.311 184-184 184z"/>
             </svg></button>
         </div>
-        <p class="release">Version 3 Alpha 3</p>
-        <button class="add-button">Install</button><hr>
+        <p class="release">Version 3 Alpha 4</p>
+        <pwa-install class="add-button" featuresheader="The Features:">Install</pwa-install><hr>
         <p>BOcT is a Static Browser Chatbot</p>
         <p>It's currently in Early development stages</p>
         <p>Future Updates to BOcT can make it perform basic Maths, more Unit Conversions, Maybe suggest you some Movies...</p>
