--- a/index.html
+++ b/index.html
@@ -94,12 +94,12 @@
             <path d="M8 256c0 136.966 111.033 248 248 248s248-111.034 248-248S392.966 8 256 8 8 119.033 8 256zm248 184V72c101.705 0 184 82.311 184 184 0 101.705-82.311 184-184 184z"/>
             </svg></button>
         </div>
-        <p class="release">Version 3 Preview 4.1</p>
+        <p class="release">Version 3 Final Preview</p>
         <div class="pwaBtn"><pwa-install featuresheader="The Features:">Install</pwa-install>
         </div><hr>
         <p>BOcT is a Static Browser Chatbot</p>
-        <p>It's currently in Early development stages</p>
-        <p>Future Updates to BOcT can make it perform basic Maths, more Unit Conversions, Maybe suggest you some Movies...</p>
+        <p>It's currently in Lazy Development</p>
+        <p>Future Updates to BOcT can make it perform basic Maths, Maybe suggest you some Movies...</p>
       </fieldset>
     </div>
   </div>
@@ -115,8 +115,6 @@
   <div id="info_popup">
     <div class="info_window">
       <div class="info_content">
-        <p>New Feature: Unit Conversions</p>
-        <p>Example: convert 100cm to m</p>
         <p>Currently Working Replies:</p>
         <ul>
           <li>hi / hello / hey / heya</li>
@@ -128,8 +126,12 @@
           <li>google/youtube/bing/duckduckgo *word*</li>
           <li>roll a dice / roll dice</li>
           <li>flip a coin / toss a coin</li>
-        </ul>
-        <p>DOt Commands: </p>
+        </ul><hr>
+        <p>Also, BOcT can perform some unit-conversions in Length, Areas, Mass, Temperatures and Volume.</p>
+        <p>To Perform unit-conversions: conv XA to B</p>
+        <p>X: unit value | A: the base unit | B: the output unit</p>
+        <p>Ex: conv 100cm to m (outputs 1m)</p>
+        <hr><p>DOt Commands: </p>
         <ul>
           <li>.name</li>
           <li>.age</li>
@@ -146,7 +148,7 @@
         <a href="https://github.com/The-BOcT/The-BOcT.github.io/blob/master/LICENSE.md" title="Under MIT LICENSE">© 2020 U-C-S</a><br>
         <a href="https://github.com/The-BOcT/The-BOcT.github.io/">View Source</a>
       </div>
-      <button id="experimental">Try Experimental Version</button>
+      <p class="text1">Written with ❤ in TypeScript</p>
       <button class="info_close">close</button>
     </div>
   </div>
