--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <path d="M8 256c0 136.966 111.033 248 248 248s248-111.034 248-248S392.966 8 256 8 8 119.033 8 256zm248 184V72c101.705 0 184 82.311 184 184 0 101.705-82.311 184-184 184z"/>
             </svg></button>
         </div>
-        <p class="releaseVer">Version 3.0.4 | pre-Oct 2020 Release</p>
+        <p class="releaseVer">Version 3.0.4a | pre-Oct 2020 Release</p>
         <div class="pwaBtn"><pwa-install featuresheader="Some of the Features:">Install</pwa-install>
         </div><hr>
         <p>BOcT is a Static Browser Chatbot</p>
@@ -161,9 +161,6 @@
 
     <label class="stg_contain">Disable Load Screen:
       <input type="checkbox" id="stg_disable_load"></label>
-
-      <label class="stg_contain">Reduce Animations and Transitions:
-        <input type="checkbox" id="stg_remove_anim"></label>
 
     <button class="stg_btn">Clear your Settings</button>
 
