--- a/index.html
+++ b/index.html
@@ -115,14 +115,12 @@
   <div id="info_popup">
     <div class="info_window">
       <div class="info_content">
-        <p>Currently Working Replies:</p>
+        <p>BOcT will recieve Monthly Release and also Servicing Releases, Once in a while</p>
+        <p>This Oct Release is a Service/Polish Release meaning that this release does not contain any new features. It simply is a make-existing-things-better Release</p>
+        <hr><p>Some commands for interesting replies:</p>
         <ul>
-          <li>hi / hello / hey / heya</li>
-          <li>no / nothing / I dont know</li>
           <li>What is your age / your age</li>
           <li>Annoy me / idiot</li>
-          <li>ok / great / .....</li>
-          <li>so / what else</li>
           <li>google/youtube/bing/duckduckgo *word*</li>
           <li>roll a dice / roll dice</li>
           <li>flip a coin / toss a coin</li>
@@ -131,15 +129,13 @@
         <p>To Perform unit-conversions: conv XA to B</p>
         <p>X: unit value | A: the base unit | B: the output unit</p>
         <p>Ex: conv 100cm to m (outputs 1m)</p>
-        <hr><p>DOt Commands: </p>
+        <hr><p>some DOt Commands: </p>
         <ul>
           <li>.name</li>
           <li>.age</li>
           <li>.god</li>
           <li>.v</li>
-          <li>.url</li>
           <li>.code</li>
-          <li>.meow</li>
           <li>.dice</li>
           <li>.coin</li>
         </ul>
