*Evil laughing* More Script Polishing - Feeling crazy, complicated some parts of code.

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <div class="info_window">
       <div class="info_content">
         <p>BOcT will recieve Monthly Release and also Servicing Releases, Once in a while</p>
-        <p>This Oct Release is a Service/Polish Release meaning that this release does not contain any new features. It simply is a make-existing-things-better Release</p>
+        <p>This Oct Release is a Service/Polish Release meaning that this release does not contain any new features. It simply is a make-existing-things-better Release.</p>
         <hr><p>Some commands for interesting replies:</p>
         <ul>
           <li>What is your age / your age</li>
