--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="U-C-S" />
   <meta name="description" content="Meet the BOcT" />
 
-  <link rel="icon" href="boctstyle/icons/robot.ico" />
+  <link rel="icon" href="dist/boctstyle/icons/robot.ico" />
   <link rel="license" href="/LICENSE.md" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com/" crossorigin />
@@ -18,13 +18,13 @@
   <link rel="preconnect" href="https://cdn.jsdelivr.net/" crossorigin />
 
   <!--CSS-->
-  <link rel="stylesheet" href="boctstyle/boct.css" />
-  <link rel="stylesheet" href="boctstyle/boctmediaq.css" media="screen and (max-width: 960px)" />
+  <link rel="stylesheet" href="dist/boctstyle/boct.css" />
+  <link rel="stylesheet" href="dist/boctstyle/boctmediaq.css" media="screen and (max-width: 960px)" />
 
   <!--PWA-->
   <meta name="application-name" content="The-BOcT" />
   <meta name="theme-color" content="#E64C63"/>
-  <link rel="apple-touch-icon" sizes="128x128" href="/boctstyle/icons/robot128.png" />
+  <link rel="apple-touch-icon" sizes="128x128" href="/dist/boctstyle/icons/robot128.png" />
   <link rel="manifest" type="application/manifest+json; charset=utf-8" href="/manifest.json" />
   <script type="module">
     import 'https://cdn.jsdelivr.net/npm/@pwabuilder/pwaupdate';
@@ -34,10 +34,10 @@
   <script type="module" src="https://cdn.jsdelivr.net/npm/@pwabuilder/pwainstall@latest/dist/pwa-install.min.js"></script>
 
   <!--Scripts-->
-  <script defer src="boct_Scripts/index.js"></script>
-  <script defer src="boct_Scripts/settings.js"></script>
-  <script defer src="boct_Scripts/talk-script.js"></script>
-  <script defer src="boct_Scripts/unit-convert.js"></script>
+  <script defer src="dist/index.js"></script>
+  <script defer src="dist/settings.js"></script>
+  <script defer src="dist/talk-script.js"></script>
+  <script defer src="dist/unit-convert.js"></script>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-172329807-1"></script>
@@ -95,7 +95,7 @@
             <path d="M8 256c0 136.966 111.033 248 248 248s248-111.034 248-248S392.966 8 256 8 8 119.033 8 256zm248 184V72c101.705 0 184 82.311 184 184 0 101.705-82.311 184-184 184z"/>
             </svg></button>
         </div>
-        <p class="releaseVer">Version 3.1 | Oct 2020 Release</p>
+        <p class="releaseVer">Version 3.1.1 | Oct 2020 Release</p>
         <div class="pwaBtn"><pwa-install featuresheader="Some of the Features:">Install</pwa-install>
         </div><hr>
         <p>BOcT is a Static Browser Chatbot</p>
