--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="U-C-S" />
   <meta name="description" content="Meet the BOcT" />
 
-  <link rel="icon" href="dist/boctstyle/icons/robot.ico" />
+  <link rel="icon" href="assets/robot.ico" />
   <link rel="license" href="/LICENSE.md" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com/" crossorigin />
@@ -18,13 +18,13 @@
   <link rel="preconnect" href="https://cdn.jsdelivr.net/" crossorigin />
 
   <!--CSS-->
-  <link rel="stylesheet" href="dist/boctstyle/boct.css" />
-  <link rel="stylesheet" href="dist/boctstyle/boctmediaq.css" media="screen and (max-width: 960px)" />
+  <link rel="stylesheet" href="dist/styles/boct.css" />
+  <link rel="stylesheet" href="dist/styles/boctmediaq.css" media="screen and (max-width: 960px)" />
 
   <!--PWA-->
   <meta name="application-name" content="The-BOcT" />
   <meta name="theme-color" content="#E64C63"/>
-  <link rel="apple-touch-icon" sizes="128x128" href="/dist/boctstyle/icons/robot128.png" />
+  <link rel="apple-touch-icon" sizes="128x128" href="/assets/robot128.png" />
   <link rel="manifest" type="application/manifest+json; charset=utf-8" href="/manifest.json" />
   <script type="module">
     import 'https://cdn.jsdelivr.net/npm/@pwabuilder/pwaupdate';
@@ -95,7 +95,7 @@
             <path d="M8 256c0 136.966 111.033 248 248 248s248-111.034 248-248S392.966 8 256 8 8 119.033 8 256zm248 184V72c101.705 0 184 82.311 184 184 0 101.705-82.311 184-184 184z"/>
             </svg></button>
         </div>
-        <p class="releaseVer">Version 3.1.1 | Oct 2020 Release</p>
+        <p class="releaseVer">Version 3.1.2 | Oct 2020 Release</p>
         <div class="pwaBtn"><pwa-install featuresheader="Some of the Features:">Install</pwa-install>
         </div><hr>
         <p>BOcT is a Static Browser Chatbot</p>
@@ -115,8 +115,8 @@
   <div id="info_popup">
     <div class="info_window">
       <div class="info_content">
-        <p>BOcT will recieve Monthly Release and also Servicing Releases, Once in a while</p>
-        <p>This Oct Release is a Service/Polish Release meaning that this release does not contain any new features. It simply is a make-existing-things-better Release.</p>
+        <p>BOcT will recieve Monthly Release and also Service Releases, Once in a while</p>
+        <p>This Oct 2020 Release is a Service/Polish Release meaning that this release does not contain any new features. It simply is a make-existing-things-better Release.</p>
         <hr><p>Some commands for interesting replies:</p>
         <ul>
           <li>What is your age / your age</li>
