--- a/index.html
+++ b/index.html
@@ -25,14 +25,8 @@
   <meta name="application-name" content="The-BOcT" />
   <meta name="theme-color" content="#E64C63"/>
   <link rel="apple-touch-icon" sizes="128x128" href="/assets/robot128.png" />
-  <link rel="manifest" type="application/manifest+json; charset=utf-8" href="/manifest.json" />
-  <script type="module">
-    import 'https://cdn.jsdelivr.net/npm/@pwabuilder/pwaupdate';
-    const el = document.createElement('pwa-update');
-    document.body.appendChild(el);
-  </script>
-  <script type="module" src="https://cdn.jsdelivr.net/npm/@pwabuilder/pwainstall@latest/dist/pwa-install.min.js"></script>
-
+  <link rel="manifest" type="application/manifest+json; charset=utf-8" href="/boct.webmanifest" />
+  
   <!--Scripts-->
   <script defer src="dist/domElements.js"></script>
   <script defer src="dist/index.js"></script>
@@ -41,8 +35,8 @@
   <script defer src="dist/unit-convert.js"></script>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-172329807-1"></script>
-  <script>
+  <script defer src="https://www.googletagmanager.com/gtag/js?id=UA-172329807-1"></script>
+  <script defer>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
@@ -52,8 +46,8 @@
 </head>
 <body>
   <!-- main -->
-  <div id="main">
-    <div class="pagehead">
+  <div id="Main">
+    <div class="PageHead">
       <div id="heading_container"><h1 id="heading">The BOcT</h1></div>
       <div class="bot-head">
         <button id="BOcT" href="javascript:void(0);" title="The BOcT">
@@ -62,7 +56,7 @@
       </div>
     </div>
 
-    <div id="chatter">
+    <div id="Chatter">
       <div class="talk_box" id="chatspace">
         <!-- CHAT HTML goes here --->
 
@@ -89,9 +83,8 @@
           <button id="ThemeBtn" data-themenow="dark" title="Toggle Dark/Light Mode">
             <svg viewBox="0 0 512 512"><path id="svg4"/></svg></button>
         </div>
-        <p class="releaseVer">Version 3.2 | Nov 2020 Release</p>
-        <div class="pwaBtn"><pwa-install featuresheader="Some of the Features:">Install</pwa-install>
-        </div><hr/>
+        <p id="releaseVer">Version 3.2.1 | Nov 2020 Release</p>
+        <button id="pwaInstallBtn">install</button><hr/>
         <p>BOcT is a Static Browser Chatbot</p>
         <p>It's currently in Lazy Development</p>
         <p>Future Updates to BOcT can make it perform basic Maths, Maybe suggest you some Movies...</p>
@@ -101,9 +94,10 @@
 
   <!-- Fake Loading screen --->
   <!--Create a Lazy load for loading screen-->
-  <div id="loadScreen"><div class="loader">
-    <div id="load_barr"></div>
-    <div id="load_text">BOcT Loading...</div>
+  <div id="loadScreen">
+    <div class="load">
+      <div id="load_barr"></div>
+      <div id="load_text">BOcT Loading...</div>
   </div></div>
 
   <!-- iPopUp --->
