--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           <button id="ThemeBtn" data-themenow="dark" title="Toggle Dark/Light Mode">
             <svg viewBox="0 0 512 512"><path id="svg4"/></svg></button>
         </div>
-        <p id="releaseVer">Version 3.2.1 | Nov 2020 Release</p>
+        <p id="releaseVer">Version 3.2.1a | Nov 2020 Release</p>
         <button id="pwaInstallBtn">install</button><hr/>
         <p>BOcT is a Static Browser Chatbot</p>
         <p>It's currently in Lazy Development</p>
