--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <meta name="google-site-verification" content="qho6LUTU0hTe7r6Slj67fZhj2aTZ7MvQ4N-PQ2X_u0U" />
   <meta name="author" content="U-C-S" />
   <meta name="description" content="Meet the BOcT" />
-
   <link rel="icon" href="assets/robot.ico" />
   <link rel="license" href="/LICENSE.md" />
 
@@ -51,7 +50,7 @@
       <div id="heading_container"><h1 id="heading">The BOcT</h1></div>
       <div class="bot-head">
         <button id="BOcT" href="javascript:void(0);" title="The BOcT">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512"><path id="svg0"/></svg>
+          <svg viewBox="0 0 640 512"><path id="svg0"/></svg>
         </button>
       </div>
     </div>
@@ -83,7 +82,7 @@
           <button id="ThemeBtn" data-themenow="dark" title="Toggle Dark/Light Mode">
             <svg viewBox="0 0 512 512"><path id="svg4"/></svg></button>
         </div>
-        <p id="releaseVer">Version 3.2.1a | Nov 2020 Release</p>
+        <p id="releaseVer">Version 3.2.1b | Nov 2020 Release</p>
         <button id="pwaInstallBtn">install</button><hr/>
         <p>BOcT is a Static Browser Chatbot</p>
         <p>It's currently in Lazy Development</p>
@@ -130,8 +129,8 @@
         </ul>
       </div>
       <div class="info_links">
-        <a href="https://github.com/The-BOcT/The-BOcT.github.io/blob/master/LICENSE.md" title="Under MIT LICENSE">© 2020 U-C-S</a><br>
-        <a href="https://github.com/The-BOcT/The-BOcT.github.io/">View Source</a>
+        <a href="https://github.com/The-BOcT/the-boct.github.io/blob/master/LICENSE.md" title="Under MIT LICENSE">© 2020 U-C-S</a><br>
+        <a href="https://github.com/The-BOcT/the-boct.github.io/">View Source</a>
       </div>
       <p class="text1">Written with ❤ in TypeScript</p>
       <button id="info_close">close</button>
