--- a/public/index.html
+++ b/public/index.html
@@ -17,8 +17,8 @@
   <link rel="preconnect" href="https://cdn.jsdelivr.net/" crossorigin />
 
   <!--CSS-->
-  <link rel="stylesheet" href="dist/styles/boct.css" />
-  <link rel="stylesheet" href="dist/styles/boctmediaq.css" media="screen and (max-width: 960px)" />
+  <link rel="stylesheet" href="styles/boct.css" />
+  <link rel="stylesheet" href="styles/boctmediaq.css" media="screen and (max-width: 960px)" />
 
   <!--PWA-->
   <meta name="application-name" content="The-BOcT" />
@@ -27,11 +27,11 @@
   <link rel="manifest" type="application/manifest+json; charset=utf-8" href="/boct.webmanifest" />
   
   <!--Scripts-->
-  <script defer src="dist/domElements.js"></script>
-  <script defer src="dist/index.js"></script>
-  <script defer src="dist/settings.js"></script>
-  <script defer src="dist/talk-script.js"></script>
-  <script defer src="dist/unit-convert.js"></script>
+  <script defer src="scripts/domElements.js"></script>
+  <script defer src="scripts/index.js"></script>
+  <script defer src="scripts/settings.js"></script>
+  <script defer src="scripts/talk-script.js"></script>
+  <script defer src="scripts/unit-convert.js"></script>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script defer src="https://www.googletagmanager.com/gtag/js?id=UA-172329807-1"></script>
@@ -82,7 +82,7 @@
           <button id="ThemeBtn" data-themenow="dark" title="Toggle Dark/Light Mode">
             <svg viewBox="0 0 512 512"><path id="svg4"/></svg></button>
         </div>
-        <p id="releaseVer">Version 3.2.1b | Nov 2020 Release</p>
+        <p id="releaseVer">Version 3.3 | Nov 2020 Release</p>
         <button id="pwaInstallBtn">install</button><hr/>
         <p>BOcT is a Static Browser Chatbot</p>
         <p>It's currently in Lazy Development</p>
