--- a/public/index.html
+++ b/public/index.html
@@ -36,12 +36,12 @@
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script defer src="https://www.googletagmanager.com/gtag/js?id=UA-172329807-1"></script>
     <script defer>
-      window.dataLayer = window.dataLayer || []
+      window.dataLayer = window.dataLayer || [];
       function gtag() {
-        dataLayer.push(arguments)
+        dataLayer.push(arguments);
       }
-      gtag('js', new Date())
-      gtag('config', 'UA-172329807-1')
+      gtag("js", new Date());
+      gtag("config", "UA-172329807-1");
     </script>
   </head>
   <body>
