--- a/index.html
+++ b/index.html
@@ -1,30 +1,28 @@
-<!DOCTYPE html>
-<html lang="en" data-theme="dark">
-  <head>
+<!DOCTYPE html><html lang="en" data-theme="dark"><head>
     <!--Meta-->
     <title>The BOcT</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta charset="utf-8" />
-    <meta name="google-site-verification" content="qho6LUTU0hTe7r6Slj67fZhj2aTZ7MvQ4N-PQ2X_u0U" />
-    <meta name="author" content="U-C-S" />
-    <meta name="description" content="Meet the BOcT" />
-    <link rel="icon" href="assets/robot.ico" />
-    <link rel="license" href="/LICENSE.md" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta name="google-site-verification" content="qho6LUTU0hTe7r6Slj67fZhj2aTZ7MvQ4N-PQ2X_u0U">
+    <meta name="author" content="U-C-S">
+    <meta name="description" content="Meet the BOcT">
+    <link rel="icon" href="assets/robot.ico">
+    <link rel="license" href="/LICENSE.md">
 
-    <link rel="preconnect" href="https://fonts.googleapis.com/" crossorigin />
-    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
-    <link rel="preconnect" href="https://www.google-analytics.com/" crossorigin />
-    <link rel="preconnect" href="https://cdn.jsdelivr.net/" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com/" crossorigin>
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
+    <link rel="preconnect" href="https://www.google-analytics.com/" crossorigin>
+    <link rel="preconnect" href="https://cdn.jsdelivr.net/" crossorigin>
 
     <!--CSS-->
-    <link rel="stylesheet" href="styles/boct.css" />
-    <link rel="stylesheet" href="styles/boctmediaq.css" media="screen and (max-width: 960px)" />
+    <link rel="stylesheet" href="styles/boct.css">
+    <link rel="stylesheet" href="styles/boctmediaq.css" media="screen and (max-width: 960px)">
 
     <!--PWA-->
-    <meta name="application-name" content="The-BOcT" />
-    <meta name="theme-color" content="#E64C63" />
-    <link rel="apple-touch-icon" sizes="128x128" href="/assets/robot128.png" />
-    <link rel="manifest" type="application/manifest+json; charset=utf-8" href="/boct.webmanifest" />
+    <meta name="application-name" content="The-BOcT">
+    <meta name="theme-color" content="#E64C63">
+    <link rel="apple-touch-icon" sizes="128x128" href="/assets/robot128.png">
+    <link rel="manifest" type="application/manifest+json; charset=utf-8" href="/boct.webmanifest">
 
     <!--Scripts-->
     <script defer src="scripts/domElements.js"></script>
@@ -51,7 +49,7 @@
         <div id="heading_container"><h1 id="heading">The BOcT</h1></div>
         <div class="bot-head">
           <button id="BOcT" href="javascript:void(0);" title="The BOcT">
-            <svg viewBox="0 0 640 512"><path id="svg0" /></svg>
+            <svg viewBox="0 0 640 512"><path id="svg0"/></svg>
           </button>
         </div>
       </div>
@@ -63,9 +61,9 @@
         <!-- Type bar --->
         <div class="type_box">
           <form class="type_box-inner" action="javascript:void(0);">
-            <input id="typespace" type="text" placeholder="Wanna talk with BOcT? Then type here..!" autocomplete="off" maxlength="120" spellcheck="true" />
+            <input id="typespace" type="text" placeholder="Wanna talk with BOcT? Then type here..!" autocomplete="off" maxlength="120" spellcheck="true">
             <button id="typespace-enter" type="submit">
-              <svg viewBox="0 0 448 512"><path id="svg1" /></svg>
+              <svg viewBox="0 0 448 512"><path id="svg1"/></svg>
             </button>
           </form>
         </div>
@@ -76,20 +74,20 @@
           <legend>About BOcT</legend>
           <div class="aboutbtns">
             <button id="settingBtn" title="Settings">
-              <svg viewBox="0 0 512 512"><path id="svg2" /></svg>
+              <svg viewBox="0 0 512 512"><path id="svg2"/></svg>
             </button>
             <button id="infoBtn" title="Info">
-              <svg viewBox="0 0 512 512"><path id="svg3" /></svg>
+              <svg viewBox="0 0 512 512"><path id="svg3"/></svg>
             </button>
             <button id="ThemeBtn" data-themenow="dark" title="Toggle Dark/Light Mode">
-              <svg viewBox="0 0 512 512"><path id="svg4" /></svg>
+              <svg viewBox="0 0 512 512"><path id="svg4"/></svg>
             </button>
           </div>
           <p id="releaseVer">Version 3.3 | Jan 2021 Release</p>
           <button id="pwaInstallBtn">install</button>
-          <hr />
+          <hr>
           <p>BOcT is a Static Browser Chatbot</p>
-          <p>It's currently in Lazy Development</p>
+          <p>It&apos;s currently in Lazy Development</p>
           <p>Future Updates to BOcT can make it perform basic Maths, Maybe suggest you some Movies...</p>
         </fieldset>
       </div>
@@ -116,12 +114,12 @@
             <li>roll a dice / roll dice</li>
             <li>flip a coin / toss a coin</li>
           </ul>
-          <hr />
+          <hr>
           <p>Also, BOcT can perform some unit-conversions in Length, Areas, Mass, Temperatures and Volume.</p>
           <p>To Perform unit-conversions: conv XA to B</p>
           <p>X: unit value | A: the base unit | B: the output unit</p>
           <p>Ex: conv 100cm to m (outputs 1m)</p>
-          <hr />
+          <hr>
           <p>some DOt Commands:</p>
           <ul>
             <li>.name</li>
@@ -134,10 +132,10 @@
           </ul>
         </div>
         <div class="info_links">
-          <a href="https://github.com/The-BOcT/the-boct.github.io/blob/master/LICENSE.md" title="Under MIT LICENSE">© 2020 U-C-S</a><br />
+          <a href="https://github.com/The-BOcT/the-boct.github.io/blob/master/LICENSE.md" title="Under MIT LICENSE">&#xA9; 2020 U-C-S</a><br>
           <a href="https://github.com/The-BOcT/the-boct.github.io/">View Source</a>
         </div>
-        <p class="text1">Written with ❤ in TypeScript</p>
+        <p class="text1">Written with &#x2764; in TypeScript</p>
         <button id="info_close">close</button>
       </div>
     </div>
@@ -145,13 +143,14 @@
     <!--Off-Canvas menu for Settings--->
     <aside class="settingbar">
       <h2>BOcT Settings</h2>
-      <label class="stg_contain">Open Chatbox by Default: <input type="checkbox" id="stg_chat_open_default" /></label>
+      <label class="stg_contain">Open Chatbox by Default: <input type="checkbox" id="stg_chat_open_default"></label>
 
-      <label class="stg_contain">Disable Load Screen: <input type="checkbox" id="stg_disable_load" /></label>
+      <label class="stg_contain">Disable Load Screen: <input type="checkbox" id="stg_disable_load"></label>
 
       <button class="stg_btn">Clear your Settings</button>
 
       <button id="stg_clearchat" class="stg_btn">Clear the Chat</button>
     </aside>
-  </body>
-</html>
+  
+
+</body></html>
