--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,10 @@
     <meta name="author" content="U-C-S" />
     <meta name="description" content="Meet the BOcT" />
     <link rel="icon" href="assets/robot.ico" />
-    <link rel="license" href="/LICENSE.md" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com/" crossorigin />
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
     <link rel="preconnect" href="https://www.google-analytics.com/" crossorigin />
-    <link rel="preconnect" href="https://cdn.jsdelivr.net/" crossorigin />
 
     <!--CSS-->
     <link rel="stylesheet" href="styles/boct.css" />
@@ -85,7 +83,7 @@
               <svg viewBox="0 0 512 512"><path id="svg4" /></svg>
             </button>
           </div>
-          <p id="releaseVer">Version 3.3 | Jan 2021 Release</p>
+          <p id="releaseVer">Version 3.4 | Jan 2021</p>
           <button id="pwaInstallBtn">install</button>
           <hr />
           <p>BOcT is a Static Browser Chatbot</p>
