--- a/public/index.html
+++ b/public/index.html
@@ -1,25 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>The BOcT</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
-    <link rel="icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Web site created using create-snowpack-app" />
-    <title>Snowpack App</title>
+    <meta name="google-site-verification" content="qho6LUTU0hTe7r6Slj67fZhj2aTZ7MvQ4N-PQ2X_u0U" />
+    <meta name="author" content="U-C-S" />
+    <meta name="description" content="Meet the BOcT" />
+    <link rel="icon" href="assets/robot.ico" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com/" crossorigin />
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
+    <link rel="preconnect" href="https://www.google-analytics.com/" crossorigin />
+
+    <!--PWA-->
+    <meta name="application-name" content="The-BOcT" />
+    <meta name="theme-color" content="#E64C63" />
+    <link rel="apple-touch-icon" sizes="128x128" href="/assets/robot128.png" />
+    <link rel="manifest" type="application/manifest+json; charset=utf-8" href="/boct.webmanifest" />
   </head>
   <body>
     <div id="root"></div>
+
     <noscript>You need to enable JavaScript to run this app.</noscript>
+
     <script type="module" src="/dist/index.js"></script>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <script defer src="https://www.googletagmanager.com/gtag/js?id=UA-172329807-1"></script>
+    <script defer>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", "UA-172329807-1");
+    </script>
   </body>
 </html>
