--- a/public/index.html
+++ b/public/index.html
@@ -16,15 +16,14 @@
     <!--PWA-->
     <meta name="application-name" content="The-BOcT" />
     <meta name="theme-color" content="#E64C63" />
-    <link rel="apple-touch-icon" sizes="128x128" href="/assets/robot128.png" />
-    <link rel="manifest" type="application/manifest+json; charset=utf-8" href="/boct.webmanifest" />
+    <link rel="apple-touch-icon" sizes="128x128" href="assets/robot128.png" />
+    <link rel="manifest" type="application/manifest+json; charset=utf-8" href="boct.webmanifest" />
   </head>
   <body>
     <div id="root"></div>
 
     <noscript>You need to enable JavaScript to run this app.</noscript>
 
-    <script type="module" src="/dist/index.js"></script>
     <script defer src="https://www.googletagmanager.com/gtag/js?id=UA-172329807-1"></script>
     <script defer>
       window.dataLayer = window.dataLayer || [];
