Return of v3 Layout (Static Only) v4-alpha-4 - Added missing CSS - Added SVG back to all elems that need them

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     <link rel="manifest" type="application/manifest+json; charset=utf-8" href="boct.webmanifest" />
   </head>
   <body>
-    <div id="root"></div>
+    <div id="Main"></div>
 
     <noscript>You need to enable JavaScript to run this app.</noscript>
 
