--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="dark">
   <head>
     <title>The BOcT</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -32,6 +32,9 @@
       }
       gtag("js", new Date());
       gtag("config", "UA-172329807-1");
+
+      const currentThemeCokie = localStorage.getItem("theme");
+      if (currentThemeCokie) document.documentElement.setAttribute("data-theme", currentThemeCokie);
     </script>
   </body>
 </html>
